--- a/my_playbook.yml
+++ b/my_playbook.yml
@@ -1,6 +1,9 @@
 --- 
 - name: install Tomcat server 
-  hosts: tomcat 
+  hosts: tomcat
+  become_user: root
+  become_method: sudo
+  become: yes
   tasks: 
     - name: Update system 
       yum: 
